--- a/MultiTenancy/Gateway/appsettings.json
+++ b/MultiTenancy/Gateway/appsettings.json
@@ -1,9 +1,9 @@
 ﻿{
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "Domain": "dazhaoactivedirectory.onmicrosoft.com",
+    "Domain": "microsoft.onmicrosoft.com",
     "TenantId": "751a9ed0-a400-42b9-a1ea-575abe89c5a3",
-    "ClientId": "4b1ff6d2-65f2-4075-87b8-472dd81aa8c5"
+    "AppId": "4b1ff6d2-65f2-4075-87b8-472dd81aa8c5"
   },
   "Logging": {
     "IncludeScopes": false,
