--- a/MultiTenancy/Gateway/appsettings.json
+++ b/MultiTenancy/Gateway/appsettings.json
@@ -2,8 +2,9 @@
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "microsoft.onmicrosoft.com",
-    "TenantId": "751a9ed0-a400-42b9-a1ea-575abe89c5a3",
-    "AppId": "4b1ff6d2-65f2-4075-87b8-472dd81aa8c5"
+    "TenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
+    "AppId": "a68d25f1-1e2b-4d4f-b503-ca1ae5525277",
+    "AppSecret": ""
   },
   "Logging": {
     "IncludeScopes": false,
