--- a/MultiTenancy/Gateway/Gateway.csproj
+++ b/MultiTenancy/Gateway/Gateway.csproj
@@ -19,4 +19,8 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Microsoft.AspNetCore.Proxy\Microsoft.AspNetCore.Proxy.csproj" />
+  </ItemGroup>
+
 </Project>
