--- a/MultiTenancy/Gateway/Properties/launchSettings.json
+++ b/MultiTenancy/Gateway/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Gateway": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
