Enables SSL on gateway

--- a/MultiTenancy/Gateway/Gateway.csproj
+++ b/MultiTenancy/Gateway/Gateway.csproj
@@ -19,4 +19,10 @@
     <ProjectReference Include="..\Microsoft.AspNetCore.Proxy\Microsoft.AspNetCore.Proxy.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="testCert.pfx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
