--- a/MultiTenancy/Client/Properties/launchSettings.json
+++ b/MultiTenancy/Client/Properties/launchSettings.json
@@ -1,13 +1,13 @@
 {
   "profiles": {
-    "Gateway": {
+    "Client": {
       "commandName": "Project",
       "launchBrowser": false,
       "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:44302/"
+      "applicationUrl": "http://localhost:44301/"
     }
   }
 }
