--- a/MultiTenancy/Gateway/Gateway.csproj
+++ b/MultiTenancy/Gateway/Gateway.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AadConfiguration\AadConfiguration.csproj" />
     <ProjectReference Include="..\Microsoft.AspNetCore.Proxy\Microsoft.AspNetCore.Proxy.csproj" />
   </ItemGroup>
 
