--- a/MultiTenancy/Client/Client.csproj
+++ b/MultiTenancy/Client/Client.csproj
@@ -12,4 +12,8 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AadConfiguration\AadConfiguration.csproj" />
+  </ItemGroup>
+
 </Project>
