--- a/MultiTenancy/Gateway/appsettings.Development.json
+++ b/MultiTenancy/Gateway/appsettings.Development.json
@@ -6,5 +6,6 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "AadOptionsFile": "C:\\Users\\dazhao\\Desktop\\AadOptions.json"
 }
