--- a/MultiTenancy/Client2/appsettings.Development.json
+++ b/MultiTenancy/Client2/appsettings.Development.json
@@ -6,5 +6,7 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "GatewayUrl": "https://localhost:44302/api/values",
+  "AadOptionsFile": "C:\\Users\\dazhao\\Desktop\\AadOptions.json"
 }
